src/styles/forms-reveal.css
/*
Note :after are not alllowed in <input>
*/

/* Clear existing on IE 10 */
/*::-ms-clear {
	display: none;
}*/

/*.reveal {
	margin: 0 0 0 -0.8em;
	color: #666;
	cursor: pointer;
	font-style: normal;
	font-size: 2.0em;
}

.reveal:after {
	position: relative;
	top:.5em;
	content: "\0900"; /* Devanagari sign inverted candrabindu - Not supported in some fonts *
}*/

/* using icon-eye-open */
.reveal {
	margin: 0 0 0 -1.8em;
	color: #666;
	cursor: pointer;
	font-style: normal;
	font-size: 1.0em;
	position: relative;
	top:.1em;
}

